--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -95,7 +95,7 @@
                             <span class="language-name" th:text="#{hobbies.lang.dutch}">Dutch</span>
                             <span class="language-level" th:text="#{hobbies.lang.native}">Native</span>
                         </div>
-                        <div class="progress-track">
+                        <div class="progress-track" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" th:attr="aria-label=#{hobbies.lang.dutch}">
                             <div class="progress-fill" style="width: 100%"></div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <span class="language-name" th:text="#{hobbies.lang.english}">English</span>
                             <span class="language-level" th:text="#{hobbies.lang.native}">Native</span>
                         </div>
-                        <div class="progress-track">
+                        <div class="progress-track" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" th:attr="aria-label=#{hobbies.lang.english}">
                             <div class="progress-fill" style="width: 100%"></div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                             <span class="language-name" th:text="#{hobbies.lang.vietnamese}">Vietnamese</span>
                             <span class="language-level" th:text="#{hobbies.lang.conversational}">Conversational</span>
                         </div>
-                        <div class="progress-track">
+                        <div class="progress-track" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" th:attr="aria-label=#{hobbies.lang.vietnamese}">
                             <div class="progress-fill" style="width: 60%"></div>
                         </div>
                     </div>
