--- a/src/main/resources/templates/fragments/home-page/timeline.html
+++ b/src/main/resources/templates/fragments/home-page/timeline.html
@@ -56,7 +56,7 @@
                                 x-text="expanded ? $el.dataset.showLess : $el.dataset.readMore">
                         </button>
                     </div>
-                    <div th:if="${#strings.contains('Ahold Delhaize,Rabobank,Ordina,MedIT Solutions B.V.', event.employer)}"
+                    <div th:if="${#strings.contains('Ahold Delhaize,Rabobank,Qualogy,MedIT Solutions B.V.', event.employer)}"
                          class="mt-3 pt-3 border-t border-[var(--color-border)]">
                         <a th:href="${'#project-' + #strings.toLowerCase(#strings.substringBefore(event.employer + ' ', ' '))}"
                            class="project-timeline-link" th:text="#{projects.view.project}">View project</a>
