--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -46,6 +46,7 @@
 
     <script src="https://kit.fontawesome.com/b73a5b4c7a.js" crossorigin="anonymous"></script>
     <script th:src="@{/enhancements.js}" defer></script>
+    <script th:src="@{/contact-form.js}" defer></script>
     <script th:src="@{/webjars/alpinejs/3.15.8/dist/cdn.min.js}" defer></script>
 </body>
 </html>
